--- a/docs/style.css
+++ b/docs/style.css
@@ -1,52 +1,54 @@
 body {
-   background: #fafafa;
-   color: black;
-   font: normal 14px -apple-system, 'Myriad Pro', 'Helvetica', sans-serif;
-   padding: 20px;
-   line-height: 1.3;
-}
+	background: #fafafa;
+	color: black;
+	font: normal 14px -apple-system, 'Myriad Pro', 'Helvetica', sans-serif;
+	padding: 20px;
+	line-height: 1.3;
+	max-width:900px;
+	margin: 0 auto;
+ }
 
-section {
-   margin: 10px 0;
-   background: #eee;
-   padding: 1px 10px;
-}
+ section {
+	margin: 10px 1px;
+	background: #eee;
+	padding: 1px 10px;
+ }
 
-section section {
-   background: #ddd;
-}
+ section section {
+	background: #ddd;
+ }
 
-section section section {
-   background: #eee;
-}
+ section section section {
+	background: #eee;
+ }
 
-section section section section {
-   background: #ddd;
-}
+ section section section section {
+	background: #ddd;
+ }
 
-p {
-   max-width: 800px;
-}
+ p {
+	max-width: 800px;
+ }
 
-h1 {
-   font-size: 30px;
-}
+ h1 {
+	font-size: 30px;
+ }
 
-h2 {
-   margin: 10px 0;
-}
+ h2 {
+	margin: 10px 0;
+ }
 
-table {
-   border-collapse: collapse;
-   border-spacing: 0;
-}
+ table {
+	border-collapse: collapse;
+	border-spacing: 0;
+ }
 
-caption {
-   font-weight: bold;
-   padding: 5px;
-}
+ caption {
+	font-weight: bold;
+	padding: 5px;
+ }
 
-th, td {
-   padding: 5px;
-   border: 2px solid black;
-}
+ th, td {
+	padding: 5px;
+	border: 2px solid black;
+ }
